@@ -145,6 +145,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1498146: fix optparse to handle Unicode strings in option help,
+  description, and epilog.
+
 - Bug #1366250: minor optparse documentation error.
 
 - Bug #1361643: fix textwrap.dedent() so it handles tabs appropriately;
